Make status information available as open metrics.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-../viserve: main.o restapi.o pugixml/pugixml.o vito_io.o
-	g++ -o ../viserve main.o restapi.o vito_io.o pugixml/pugixml.o -L. -lmicrohttpd
+../viserve: main.o restapi.o pugixml/pugixml.o vito_io.o metrics.o 
+	g++ -o ../viserve main.o restapi.o vito_io.o metrics.o pugixml/pugixml.o -L. -lmicrohttpd
 
 
