Add support for GPIO monitoring.

--- a/src/viserve.vcxproj
+++ b/src/viserve.vcxproj
@@ -129,6 +129,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="gpio.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="metrics.cpp" />
     <ClCompile Include="pugixml\pugixml.cpp" />
